[EID-1627] refactor code & fix system tests